--- a/package.json
+++ b/package.json
@@ -3,24 +3,26 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "npx react-native run-android --variant=qaDebug --appIdSuffix=qa",
+    "android": "npx react-native run-android --mode=qaDebug --appIdSuffix=qa",
     "ios": "npx react-native run-ios",
     "lint": "eslint .",
     "assets": "npx react-native-asset",
     "pod": "cd ios &&  pod install --repo-update && cd ..",
     "start": "react-native start -- --reset-cache",
-    "var": "npx react-native run-android --variant=release",
+    "var": "npx react-native run-android --mode=release",
     "rel": "cd android && ./gradlew assembleRelease && cd ..",
     "bundle": "cd android && ./gradlew bundleRelease && cd ..",
     "clean": "cd android && ./gradlew clean && cd ..",
     "clear": "rm -f node_modules/react-native-config/ios/ReactNativeConfig/GeneratedDotEnv.m",
-    "runqa": "npx react-native run-android --variant=qaDebug --appIdSuffix=qa",
-    "runprod": "react-native run-android --variant=prodDebug",
+    "runqa": "npx react-native run-android --mode=qaDebug --appIdSuffix=qa",
+    "runprod": "react-native run-android --mode=prodDebug",
     "relqa": "cd android && ./gradlew assembleQaRelease && cd ..",
     "relprod": "cd android && ./gradlew assembleProdRelease && cd ..",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.3.1",
+    "@react-native-firebase/messaging": "^18.3.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-config": "^1.5.1"
