--- a/ios/flavour1.xcodeproj/xcshareddata/xcschemes/flavour1-qa.xcscheme
+++ b/ios/flavour1.xcodeproj/xcshareddata/xcschemes/flavour1-qa.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
-   version = "1.3">
+   LastUpgradeVersion = "1430"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;echo &quot;.env.prod&quot; &gt; /tmp/envfile&#10;">
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;echo &quot;.env.qa&quot; &gt; /tmp/envfile&#10;">
             </ActionContent>
          </ExecutionAction>
       </PreActions>
@@ -23,9 +23,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "flavour1.app"
-               BlueprintName = "flavour1"
+               BlueprintIdentifier = "73FD05CE2AA0AF55000144ED"
+               BuildableName = "flavour1-qa.app"
+               BlueprintName = "flavour1-qa"
                ReferencedContainer = "container:flavour1.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -35,9 +35,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -53,9 +52,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "flavour1.app"
-            BlueprintName = "flavour1"
+            BlueprintIdentifier = "73FD05CE2AA0AF55000144ED"
+            BuildableName = "flavour1-qa.app"
+            BlueprintName = "flavour1-qa"
             ReferencedContainer = "container:flavour1.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -70,9 +69,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "flavour1.app"
-            BlueprintName = "flavour1"
+            BlueprintIdentifier = "73FD05CE2AA0AF55000144ED"
+            BuildableName = "flavour1-qa.app"
+            BlueprintName = "flavour1-qa"
             ReferencedContainer = "container:flavour1.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
