--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "runprod": "react-native run-android --mode=prodDebug",
     "relqa": "cd android && ./gradlew assembleQaRelease && cd ..",
     "relprod": "cd android && ./gradlew assembleProdRelease && cd ..",
+    "qa": "cp ./.env.qa ./.env",
+    "prod": "cp ./.env.prod ./.env",
     "test": "jest"
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.3.1",
     "@react-native-firebase/messaging": "^18.3.1",
+    "@types/crypto-js": "^4.1.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-config": "^1.5.1"
